<resources>
    <string name="app_name">SoShi-fy</string>

    <!--Login Page-->
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="login">LOGIN</string>
    <string name="about_application">About Application</string>

    <!--SignUp Page-->
    <string name="sign_uppage">Sign Up</string>
    <string name="username">Username</string>
    <string name="email_idsignup">Email Id</string>
    <string name="confirm_passwod">Confirm Passwod</string>
    <string name="sign_upbutton">SIGN UP</string>
    <string name="please_enter_your_email_to_get_a_new_password">Please enter your email to get\n a new password</string>
    <string name="submit">SUBMIT</string>
    <string name="enterUserName">Please enter the UserName</string>
    <string name="enterEmailAddress">Please enter the Email Address</string>
    <string name="validEmailAddress">Please enter a valid Email Address</string>
    <string name="enterPassword">Please enter the Password</string>
    <string name="passwordsNotMatch">Passwords do not match</string>
    <string name="copyright">Copyright 2018 SoShi-fy</string>
    <string name="all_rights_reserved">All Rights Reserved</string>

    <string-array name="labels">
        <item>Home</item>
        <item>Today\'s Events</item>
        <item>Create New Event</item>
        <item>Privacy Policy</item>
        <item>Terms &amp; Conditions</item>
        <item>Notifications</item>
        <item>Contact</item>
        <item>Settings</item>
    </string-array>

    <string-array name="appnames">
        <item>Facebook</item>
        <item>WhatsApp</item>
        <item>Twitter</item>
        <item>Gmail</item>
        <item>Messaging</item>
    </string-array>

    <array name="images">
        <item>@drawable/facebook</item>
        <item>@drawable/whtsapp_icon</item>
        <item>@drawable/twitter_icon</item>
        <item>@drawable/gmail_icon</item>
        <item>@drawable/messages_img</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="termsconditions"><![CDATA[Terms & Conditions]]></string>
    <string name="to">To</string>
    <string name="search">Search</string>
    <string name="from">From</string>
    <string name="today_event_s"><u>Today Event\'s</u></string>
    <string name="notifications">Notifications</string>
    <string name="create_event">CREATE EVENT</string>
    <string name="createnewevetn">Create Event</string>
    <string name="share">SHARE</string>
    <string name="facebook_app_id">1344391299017171</string>
    <string name="fb_login_protocol_scheme">fb113663105997508</string>
    <string name="fields">Please fill all the fields</string>
    <string name="enteremail">Please enter an email address</string>
    <string name="emailformat">Please enter the correct email format</string>
    <string name="enterpassword">Please enter the password</string>
    <string name="loading">Loading, Please Wait...</string>
    <string name="somethingwrong">Something went wrong</string>
    <string name="settings">Settings</string>
    <string name="contact">Contact</string>
    <string name="thanks_for_mogoing">Thanks for MoGoing</string>
    <string name="todayevent">Today\'s Events</string>
    <string name="search_home">Search Postal code, type of event or charity type</string>
    <string name="logout">Logout</string>
    <string name="radius">Radius</string>
    <string name="tap_here_to_see_all_matching_events">Tap here to see all matching events</string>
    <string name="great_events_for_great_causes_do_great">Do Great</string>


</resources>
