<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    tools:context="com.mogo.view.activities.ForgotPasswordActivity">


    <ImageView
        android:id="@+id/backIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:src="@drawable/back_img" />

    <ImageView
        android:id="@+id/logoIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backIV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/login_logo" />

    <com.mogo.view.customcontrols.TextViewBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoIV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/great_events_for_great_causes_do_great"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.mogo.view.customcontrols.TextViewRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textColor="@color/forgotPasswordColor"
            android:textSize="@dimen/forgotPasswordSize" />

        <com.mogo.view.customcontrols.TextViewRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/please_enter_your_email_to_get_a_new_password"
            android:textColor="@color/pleaseEnter"
            android:textSize="@dimen/pleaseEnterSize" />

        <com.mogo.view.customcontrols.EditTextRegular
            android:id="@+id/emailAddressET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/righcurvedrectangle"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/email_img"
            android:gravity="center_vertical"
            android:hint="@string/email_idsignup"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/editTextColor"
            android:textColorHint="@color/editTextColor" />

        <com.mogo.view.customcontrols.ButtonRegular
            android:id="@+id/submitBT"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/loginbutton_selector"
            android:padding="20dp"
            android:text="@string/submit"
            android:textColor="@color/buttonTextColor"
            android:textSize="22sp" />

    </LinearLayout>

</RelativeLayout>
