<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    tools:context="com.mogo.view.activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/login_logo" />

            <com.mogo.view.customcontrols.TextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/great_events_for_great_causes_do_great"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <com.mogo.view.customcontrols.EditTextRegular
                android:id="@+id/emailAddressET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/righcurvedrectangle"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/email_img"
                android:gravity="center_vertical"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/editTextColor"
                android:textColorHint="@color/editTextColor"
                android:textSize="@dimen/text_size" />

            <com.mogo.view.customcontrols.EditTextRegular
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/righcurvedrectangle"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/password_img"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/editTextColor"
                android:textColorHint="@color/editTextColor"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.mogo.view.customcontrols.TextViewRegular
                    android:id="@+id/signUpTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="ToSignUpClass"
                    android:text="@string/sign_up"
                    android:textColor="@color/textViewColor"
                    android:textSize="20sp" />

                <com.mogo.view.customcontrols.TextViewRegular
                    android:id="@+id/forgotPasswordTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:onClick="ForgotScreen"
                    android:text="@string/forgot_password"
                    android:textColor="@color/textViewColor"
                    android:textSize="20sp" />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp">

                <ImageButton
                    android:id="@+id/googlePlusIB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/googleplusbutton"
                    android:padding="26dp"
                    android:src="@drawable/gmail_img" />

                <ImageButton
                    android:id="@+id/facebookButtonIB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/googlePlusIB"
                    android:background="@drawable/facebookbutton"
                    android:padding="26dp"
                    android:src="@drawable/fb_img" />

                <com.mogo.view.customcontrols.ButtonRegular
                    android:id="@+id/loginBT"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/loginbutton_selector"
                    android:onClick="login"
                    android:padding="20dp"
                    android:text="@string/login"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="22sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/righcurvedrectangle">

                <com.mogo.view.customcontrols.TextViewBold
                    android:id="@+id/aboutApplicationTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/about_application"
                    android:textColor="@color/editTextColor"
                    android:textSize="16sp" />

                <com.mogo.view.customcontrols.TextViewRegular
                    android:id="@+id/aboutDescriptionTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/aboutApplicationTV"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:text="Lorem Ipsum"
                    android:textColor="@color/textViewColor"
                    android:textSize="14sp" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
