<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    tools:context="com.mogo.view.activities.SignUpActivity">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:src="@drawable/back_img" />

        <com.mogo.view.customcontrols.TextViewRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sign_uppage"
            android:textColor="@color/signUpColor"
            android:textSize="22sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/uploadImageRL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/relative_profile">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/photoPF"
                android:layout_centerInParent="true">


                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/dummy_img" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/addImageIV"                    android:src="@drawable/add_img"/>

            </FrameLayout>





        </RelativeLayout>




    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/uploadImageRL"
        android:scrollbars="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:orientation="vertical">

            <com.mogo.view.customcontrols.EditTextRegular
                android:id="@+id/userNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/righcurvedrectangle"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/user_img"
                android:gravity="center_vertical"
                android:hint="@string/username"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/editTextColor"
                android:textColorHint="@color/editTextColor"
                android:textSize="@dimen/text_size" />

            <com.mogo.view.customcontrols.EditTextRegular
                android:id="@+id/emailAddressET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/righcurvedrectangle"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/email_img"
                android:gravity="center_vertical"
                android:hint="@string/email_idsignup"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/editTextColor"
                android:textColorHint="@color/editTextColor"
                android:textSize="@dimen/text_size" />

            <com.mogo.view.customcontrols.EditTextRegular
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/righcurvedrectangle"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/password_img"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/editTextColor"
                android:textColorHint="@color/editTextColor"
                android:textSize="@dimen/text_size" />

            <com.mogo.view.customcontrols.EditTextRegular
                android:id="@+id/confirmPasswordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/righcurvedrectangle"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/password_img"
                android:gravity="center_vertical"
                android:hint="@string/confirm_passwod"
                android:inputType="textPassword"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/editTextColor"
                android:textColorHint="@color/editTextColor"
                android:textSize="@dimen/text_size" />

            <com.mogo.view.customcontrols.ButtonRegular
                android:id="@+id/signUpBT"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/loginbutton_selector"
                android:onClick="Signup"
                android:padding="15dp"
                android:text="@string/sign_upbutton"
                android:textColor="@color/buttonTextColor"
                android:textSize="22sp" />

        </LinearLayout>


    </ScrollView>


</RelativeLayout>
