<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mogo.view.activities.EventsListActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/tool_bar_custom" />

        <RelativeLayout
            android:id="@+id/searchLayoutRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">

            <ImageView
                android:id="@+id/searchIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/search_icon" />

            <com.mogo.view.customcontrols.EditTextRegular
                android:id="@+id/searchET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/searchIV"
                android:background="@null"
                android:hint="@string/search_home"
                android:imeOptions="actionSearch"
                android:singleLine="true"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="12sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/tofromLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:background="@drawable/parent_add">

                <com.mogo.view.customcontrols.TextViewRegular
                    android:id="@+id/fromTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/dropdownIV"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/from"
                    android:textColor="#008138"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/dropdownIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/dropdown_pink" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:background="@drawable/parent_add">

                <com.mogo.view.customcontrols.TextViewRegular
                    android:id="@+id/toTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/dropdownIV2"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/to"
                    android:textColor="#008138"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/dropdownIV2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/dropdown_pink" />

            </RelativeLayout>

        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/eventsListRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />


    </LinearLayout>


</RelativeLayout>
